--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,14 @@
         android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
@@ -26,6 +28,13 @@
         <activity
             android:name=".KiokuView"
             android:label="@string/title_activity_kioku_view" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".KiokuMap"
+            android:label="@string/title_activity_kioku_map" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
