--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ktaka.dojo.miraikioku"
     android:versionCode="1"
@@ -13,8 +14,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
         <activity
-            android:name=".MainActivity"
+            android:name="org.ktaka.dojo.miraikioku.MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,13 +25,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".KiokuView"
+            android:name="org.ktaka.dojo.miraikioku.KiokuView"
             android:label="@string/title_activity_kioku_view" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.ktaka.dojo.miraikioku.KiokuMap"
+            android:label="@string/title_activity_kioku_map" >
         </activity>
     </application>
 
